--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.dustinbayer.macrohomelauncher"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 6
-        versionName "1.0.4"
+        versionCode 7
+        versionName "1.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,4 +26,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.eftimoff:android-patternview:1.0.6@aar'
+    compile 'com.github.rtugeek:ColorSeekBar:1.5.2'
 }
