--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.android.support:recyclerview-v7:27.0.1'
     compile 'com.eftimoff:android-patternview:1.0.6@aar'
     compile 'com.github.rtugeek:ColorSeekBar:1.5.2'
 }
